// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BaseLayout /> Should math stored snapshot 1`] = `
.c2 {
  width: 100px;
}

.c1 {
  max-width: 100vw;
  width: 100%;
  padding: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  border-bottom: 1px solid;
}

.c0 {
  max-width: 100vw;
  min-height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<BaseLayout>
  <styled.div>
    <div
      className="c0"
    >
      <Header>
        <styled.header>
          <header
            className="c1"
          >
            <Logo>
              <styled.img
                src="test-file-stub"
              >
                <img
                  className="c2"
                  src="test-file-stub"
                />
              </styled.img>
            </Logo>
          </header>
        </styled.header>
      </Header>
      <h1>
        Test
      </h1>
    </div>
  </styled.div>
</BaseLayout>
`;

exports[`<BaseLayout /> Should math stored snapshot 2`] = `
.c2 {
  width: 100px;
}

.c1 {
  max-width: 100vw;
  width: 100%;
  padding: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  border-bottom: 1px solid;
}

.c0 {
  max-width: 100vw;
  min-height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<BaseLayout>
  <styled.div>
    <div
      className="c0"
    >
      <Header>
        <styled.header>
          <header
            className="c1"
          >
            <Logo>
              <styled.img
                src="test-file-stub"
              >
                <img
                  className="c2"
                  src="test-file-stub"
                />
              </styled.img>
            </Logo>
          </header>
        </styled.header>
      </Header>
    </div>
  </styled.div>
</BaseLayout>
`;
